# vuk

./: .gitignore  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  quasar.config.js  roadmap.md  tsconfig.json  vite.config.js  vitePWA.js  vuk.webmanifest
certs/: dev.key  dev.pem
icons/: icon.ai  icon.kra  icon.kra~  vuk-32.png~  vuk-pix-t.png~  vuk-square.ai
src/: App.vue  Commands.js  Epub.js  db.js  main.js  toArray.js  trailingSlash.js
src-capacitor/: capacitor.config.json  package.json  pnpm-lock.yaml
src-capacitor/android/: capacitor.settings.gradle  variables.gradle
src-electron/: electron-main.ts  electron-preload.ts  global.ts  ipc.ts  loadBookFromElectron.ts  prepDev.ts  prepLeave.ts  vuk.ts
src-electron/icons/: icon.icns
src-pwa/: hasPWAFileHandlingAPI.ts  launcher.ts  manifest.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/Book/: Book.vue  ContextMenu.vue  EPUBStyle.vue  LazyLoader.vue  Live.vue  MainElem.vue  MenuItem.vue  MenuItemProps.ts  PageView.vue  Pages.ts  Target.ts  VPage.vue  index.ts  styles.ts
src/Bookmarks/: Bookmark.ts  BookmarkController.js  BookmarkController.ts  BookmarkItem.vue  Bookmarks.js  Bookmarks.ts  Bookmarks.vue  _style.sass  background.ts  index.js  index.ts  useBook.ts
src/Flow/: Flow.js
src/Live/: Live.vue  index.js
src/TOC/: ItemLink.vue  NodeEnd.vue  NodeStart.vue  TOC.js  TOC.ts  TOC.vue  index.js  index.ts
tests/: Transformer.test.ts  delay.ts  initial-title.spec.ts  open-a-book.spec.ts  set-library.spec.ts
(+159 files in other folders)
